fixed gap between panel & nav, added more space between profile page

--- a/app/assets/stylesheets/components/_panel.scss
+++ b/app/assets/stylesheets/components/_panel.scss
@@ -4,6 +4,7 @@
     z-index: 2;
     position: relative;
     top: 240px;
+    height: 100vh;
 
 }
 
@@ -59,6 +60,7 @@
     background-color: white;
     border-radius: 32px 32px 0px 0px;
     padding: 16px;
+    margin-bottom: 0px;
 }
 
 .panel-content .ratings {
